some mobile styling, menu edits

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 		<div id="main-menu-container">
       <div id="feature-menu">
         <a href="#">Our Work</a>
-        <a href="#">Leave a Review</a>
         <a href="#">Contact Us</a>
+        <a href="#">Leave a Review<span class="fa fa-google" aria-hidden="true"></span></a>
       </div>
       <div id="main-menu" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <div id="collapseMenu">
           <a href="#">Home</a>
-          <a href="#" id="collapse-toggle-interior">Interior Remodeling</a>
+          <a href="#" id="collapse-toggle-interior">Interior Remodeling<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
             <div id="collapsed-menu-interior">
               <a href="#">Bathroom Renovations</a>
               <a href="#">Basement Renovations</a>
               <a href="#">Kitchen Renovations</a>
             </div>
-          <a href="#" id="collapse-toggle-exterior">Exterior Remodeling</a>
+          <a href="#" id="collapse-toggle-exterior">Exterior Remodeling<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
           <div id="collapsed-menu-exterior">
             <a href="#">Fences</a>
             <a href="#">Roofing</a>
@@ -38,7 +38,7 @@
             <a href="#">Pergolas</a>
             <a href="#">Siding</a>
           </div>
-          <a href="#" id="collapse-toggle-shed">Shed Homes</a>
+          <a href="#" id="collapse-toggle-shed">Shed Homes<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
           <div id="collapsed-menu-shed">
             <a href="#">Shed Houses "Shouses"</a>
             <a href="#">Agriculture & Commercial Buildings</a>
