Add new images, hook up contact form

--- a/basement-renovations.html
+++ b/basement-renovations.html
@@ -51,17 +51,18 @@
     </div>
       <div class="text-align-left">
           <br />
-          <h4 class="h1">Before & After</h4>
+          <!-- <h4 class="h1">Before & After</h4>
           <div class="ba-slider">
             <img src="/images/home/bathroom.jpeg" alt="">       
             <div class="resize">
               <img src="/images/home/basement.jpeg" alt="">
             </div>
             <span class="handle"></span>
-          </div>
+          </div> -->
           <h4 class="h1" id="our-work">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="/images/work/basement-renovations/Stairs-Inside.jpg" alt="Basement Remodel">
+            <img class="our-work-image" src="/images/work/basement-renovations/basement-renovation.png" alt="Basement Remodel">
           </div>
       </div>
     </div>
@@ -78,6 +79,7 @@
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Scripts -->
     <script src="js/script.js"></script>
     <script src="js/loadTemplate.js"></script>
   </body>
