--- a/contact-us.html
+++ b/contact-us.html
@@ -8,8 +8,7 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/loadTemplate.js"></script>
+
   </head>
   <body>
     <!-- <div id="preloader"></div> -->
@@ -17,10 +16,12 @@
         <div class="hero-nav team">
     <div class="hero-nav__inner">
         <h1>Find a Home Remodeler In Cedar Falls, IA</h1>
-        <a class="btn btn-primary" href="/contact">Schedule a Call</a>
+        <a class="btn btn-primary calendly-scheduler" href="#calendly-scheduler">Schedule a Call</a>
     </div>
     </div>
     <div class="subpage">
+      <br />
+      <br />
       <h2>Hire a local home renovation pro</h2>
       <p>Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls, IA is equipped to handle all your home renovation needs. We offer a range of interior and exterior remodeling services. You can count on us to help your home stand out.</p>
       <br />
@@ -57,17 +58,18 @@
       <span>
         Family owned business serving with pride. A local business you can trust.
       </span>
-      <div class="triangle"></div>
-      <a class="btn btn-secondary">Get an Estimate</a>
     </div>
   </section>
   <section id="contactus"></section>
-  <a href="#calendly-scheduler" id="calendly-scheduler" class="btn btn-calendly">Setup an Initial Call!<span class="powered-by">Powered by Calendly</span></a>
+  <a href="#calendly-scheduler" id="calendly-scheduler" class="btn btn-calendly calendly-scheduler">Setup an Initial Call!<span class="powered-by">Powered by Calendly</span></a>
   <footer id="footer">
   </footer>
   <div class="calendly">
     <a href="#calendly-scheduler-close" id="calendly-scheduler-close" class="btn"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
     <iframe src="https://calendly.com/aoneil12?embed_domain=teambuilderslimited.com&embed_type=PopupWidget" width: "100%" height="100%" frameborder="0">
   </div>
+    <!-- Scripts -->
+    <script src="js/script.js"></script>
+    <script src="js/loadTemplate.js"></script>
   </body>
 </html>
