--- a/fencing.html
+++ b/fencing.html
@@ -25,7 +25,6 @@
     <p>We also offer your standard galvanized and black coated chain link. Our fencing installers can get you the most bang for your buck with a chain link fence while also providing a long term solution to keeping your kids and pets in and other critters out. Our fencing installers will secure all fence posts in concrete to ensure stability and durability for years to come.</p>
     <p>Reach out to us right away to arrange for expert fencing services.</p>
     <br />
-    <p>We can install:</p>
     <div class="feature-container">
       <div class="feature">
         <i class="fa fa-check-circle" aria-hidden="true"></i>
@@ -55,18 +54,18 @@
             <h3>Keep your kids and pets safe.</h3>
             <p>Choose T.E.A.M. Builders for fence installation services in the Cedar Falls, IA area. Installing a fence is a smart investment because it will:</p>
             <p>Call 319-481-8326 now to schedule fence installation services. Our fencing contractor will be glad to provide you with a free estimate. We also offer a wide variety of in-house financing to clients who are interested in financing options.</p>
+            <br />
             <a class="btn btn-primary" href="/contac.html">Contact Us</a>
           </div>
-
           <br />
-          <h4 class="h1">Before & After</h4>
+          <!-- <h4 class="h1">Before & After</h4>
           <div class="ba-slider">
             <img src="/images/home/bathroom.jpeg" alt="">       
             <div class="resize">
               <img src="/images/home/basement.jpeg" alt="">
             </div>
             <span class="handle"></span>
-          </div>
+          </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="/images/work/fencing/1557250048495_fence_4.png" alt="Fence">
