--- a/index.html
+++ b/index.html
@@ -37,71 +37,68 @@
         <div id="select-shed-homes" class="menu"><a href="#shed-homes">Shed Homes</a></div>
       </div>
     </div>
-        <div class="fade">
-      <div>
-        <img src="/images/home/basement.jpeg">
-      </div>
-      <div><img src="/images/home/kitchen.jpeg"></div>
-      <div><img src="/images/home/basement.jpeg"></div>
+    <div class="fade">
+      <div><img src="images/work/decks/team-builders-deck.png"></div>
+      <div><img src="/images/work/shed-houses/Website-roofing-final.png"></div>
     </div>
 	</div>
       <div id="main-content-service-cards-interior">
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Bathroom</a></h3>
+          <h3><a href="/bathroom-renovations.html">Bathroom</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/bathroom.jpeg" alt="Bathroom">
+          <img src="images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom">
         </div>
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Basement</a></h3>
+          <h3><a href="/basement-renovations.html">Basement</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/basement.jpeg" alt="Basement">
+          <img src="images/work/basement-renovations/basement-renovation.png" alt="Basement">
         </div>
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Kitchen</a></h3>
+          <h3><a href="/kitchen-renovations.html">Kitchen</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/kitchen.jpeg" alt="Basement">
+          <img src="images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="Kitchen">
         </div>
       </div>  
      </div> 
      <div id="main-content-service-cards-exterior" class="hidden">
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Fences</a></h3>
+          <h3><a href="/fencing.html">Fences</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/bathroom.jpeg" alt="Bathroom">
+          <img src="images/work/fencing/fence.png" alt="Fencing">
         </div>
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Roofing</a></h3>
+          <h3><a href="/roofing.html">Roofing</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/basement.jpeg" alt="Basement">
+          <img src="images/work/roofing/DJI_0665.JPG" alt="Roofing">
         </div>
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Decks & Pergolas</a></h3>
+          <h3><a href="/deck-pergolas.html">Decks & Pergolas</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/kitchen.jpeg" alt="Basement">
+          <img src="images/work/pergolas/DJI_0140.JPG" alt="Decks & Pergolas">
         </div>
       </div>  
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Siding</a></h3>
+          <h3><a href="/siding.html">Siding</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/kitchen.jpeg" alt="Basement">
+          <img src="images/work/siding/siding.png" alt="Siding">
         </div>
       </div> 
      </div> 
@@ -109,26 +106,26 @@
      <div id="main-content-service-cards-shed-homes" class="hidden">
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Shed Houses (Shouses)</a></h3>
+          <h3><a href="/shed-homes-shouses.html">Shed Houses (Shouses)</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/bathroom.jpeg" alt="Bathroom">
+          <img src="images/work/shed-houses/farm-shed.png" alt="Shed Houses">
         </div>
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Agriculture & Commercial Buildings</a></h3>
+          <h3><a href="/Agriculture-commercial-buildings.html">Agriculture & Commercial Buildings</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/basement.jpeg" alt="Basement">
+          <img src="images/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings">
         </div>
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="#">Event Venues</a></h3>
+          <h3><a href="/event-venues.html">Event Venues</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/home/kitchen.jpeg" alt="Basement">
+          <img src="images/work/event-venues/event-venue-1.png" alt="Event Venues">
         </div>
       </div>  
      </div> 
@@ -140,7 +137,7 @@
       <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls, IA</p>
     </div>
     <div class="below-main-content-image">
-      <img src="images/home/basement.jpeg">
+      <img src="images/build-image.jpg">
     </div>
   </section>
   <section class="gradient-banner">
@@ -170,7 +167,7 @@
         <p>"Quality is where it counts. Exceeding the clients' expectations in craftsmanship is the most fulfilling part of my job, and something I aim to do on every project. My motto is to take the time and care to get it done right, never sacrificing quality for productivity. There's nothing better than the customer being 100% satisfied with the product we put out for them, and knowing they hired the right guys for the job."</p>
       </div>
       <div class="bio-image">
-        <img src="http://www.fillmurray.com/g/300/350">
+        <img src="/images/team/trevor.png">
       </div>
     </div>
     <div class="bio" id="bio-reverse">
@@ -187,7 +184,7 @@
         <p>"It's always a pleasure getting to work with clients on their home remodeling projects. Helping them bring their visions to reality is something I take great pride in. I love showing up at the beginning of a project to capture a client's vision, and then showing up again towards the end of a project and hearing the client say 'this turned out better than I had ever imagined' or 'the construction crew did an incredible job, it's perfect.' It's moments like this where I know our goals and visions for value and client satisfaction have been attained and it's something Trevor and I strive to achieve on every project."</p>
       </div>
       <div class="bio-image">
-        <img src="http://www.fillmurray.com/g/300/350">
+        <img src="/images/team/austin.png">
       </div>
     </div>
 
@@ -307,6 +304,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Slick Slider -->
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- Scripts -->
     <script src="js/script.js"></script>
     <script src="js/loadTemplate.js"></script>
   </body>
