--- a/interior-remodeling.html
+++ b/interior-remodeling.html
@@ -14,7 +14,7 @@
     <div class="hero-nav interior-remodeling">
     <div class="hero-nav__inner">
         <h1>Craft a Custom Home</h1>
-        <a class="btn btn-primary" href="/our-work.html">See how T.E.A.M. Builders can help</a>
+        <a class="btn btn-primary" href="#how-we-can-help">See how T.E.A.M. Builders can help</a>
     </div>
 </div>
 <div class="subpage-content">
@@ -23,7 +23,7 @@
     </p>
     <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens, bath, and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
     <br />
-      <div class="text-align-left">
+      <div class="text-align-left" id="how-we-can-help">
         <div class="row">
           <div class="col mr-5">
             <h3>Bring your remodeling vision to life</h3>
@@ -51,10 +51,10 @@
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/decks/1.JPG" alt="Overhead View of Deck">
-            <img class="our-work-image" src="/images/work/fencing/final-fence.png" alt="Large Backyard Fence">
-            <img class="our-work-image" src="/images/work/pergolas/p1.jpg" alt="Wood Backyard Pergola">
-            <img class="our-work-image" src="/images/work/roofing/Roofing_4.png" alt="Roof on Blue House in Cedar Falls, IA">
+            <img class="our-work-image" src="/images/work/basement-renovations/basement-renovation.png" alt="Basement Renovation">
+            <img class="our-work-image" src="/images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom Renovation">
+            <img class="our-work-image" src="/images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="New Kitchen Renovation with Island">
+            <img class="our-work-image" src="/images/work/kitchen-renovations/TEAM2.jpg" alt="New Kitchen Renovation">
           </div>
       </div>
     </div>
