--- a/kitchen-renovations.html
+++ b/kitchen-renovations.html
@@ -70,16 +70,17 @@
             <li>Lower your energy bills</li>
           </ol>
           <br />
-          <h4 class="h1">Before & After</h4>
+          <!-- <h4 class="h1">Before & After</h4>
           <div class="ba-slider">
             <img src="/images/home/bathroom.jpeg" alt="">       
             <div class="resize">
               <img src="/images/home/basement.jpeg" alt="">
             </div>
             <span class="handle"></span>
-          </div>
+          </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="/images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="New Kitchen Island">
             <img class="our-work-image" src="/images/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
             <img class="our-work-image" src="/images/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
             <img class="our-work-image" src="/images/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
