--- a/our-work.html
+++ b/our-work.html
@@ -29,6 +29,7 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Bathroom Renovations</div>
               <div data-content>
+                <img src="/images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom Remodel">
                 <img src="/images/work/bathroom-renovations/bathroom.jpg" alt="Bathroom Remodel">
                 <img src="/images/work/bathroom-renovations/Shower.jpg" alt="Shower 1">
                 <img src="/images/work/bathroom-renovations/shower-2.jpg" alt="Shower 2">
@@ -37,12 +38,14 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Basement Renovations</div>
               <div data-content>
+                <img src="/images/work/basement-renovations/basement-renovation.png" alt="Basement Renovation">
                 <img src="/images/work/basement-renovations/Stairs-Inside.jpg" alt="Basement Renovation Flooring and Stairs">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Kitchen Renovations</div>
               <div data-content>
+                <img src="/images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="Kitchen Renovation Island">
                 <img src="/images/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
                 <img src="/images/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
                 <img src="/images/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
@@ -58,6 +61,7 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Fences</div>
               <div data-content>
+                <img src="/images/work/fencing/fence.png" alt="Fence">
                 <img src="/images/work/fencing/final-fence.png" alt="Final Fence">
                 <img src="/images/work/fencing/nichols-fence.png" alt="Nichols Fence">
                 <img src="/images/work/fencing/1557250048495_fence_4.png" alt="Fence">
@@ -66,6 +70,7 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Roofing</div>
               <div data-content>
+                <img src="/images/work/roofing/DJI_0665.JPG" alt="Clay Roof">
                 <img src="/images/work/roofing/r-1.jpg" alt="Roof 1">
                 <img src="/images/work/roofing/r-2.jpg" alt="Roof 2">
                 <img src="/images/work/roofing/r-3.jpg" alt="Roof 3">
@@ -77,6 +82,7 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Decks</div>
               <div data-content>
+                <img src="/images/work/decks/DJI_0140.JPG" alt="New Deck Renovation">
                 <img src="/images/work/decks/1.JPG" alt="Overhead View of Deck">
                 <img src="/images/work/decks/IMG_0574.JPG" alt="Porch Deck">
                 <img src="/images/work/decks/Night-1.jpg" alt="Night View of Deck">
@@ -96,6 +102,7 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Siding</div>
               <div data-content>
+                <img src="/images/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
                 <img src="/images/work/siding/Siding_1.jpg" alt="Siding Blue House">
                 <img src="/images/work/siding/Siding_2.png" alt="Siding Beige House">
                 <img src="/images/work/siding/Siding_3.jpg" alt="Siding Tan House">
