--- a/roofing.html
+++ b/roofing.html
@@ -17,6 +17,10 @@
         <a class="btn btn-primary" href="/contact-us.html">See how we can help finance</a>
     </div>
 </div>
+<div id="roofing-estimate-form">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrN-hZOrXnxZ96cpqWu-hAX_M7HfSlOUpgwJynpZwvRqSCGw/viewform?embedded=true" width="700" height="520" frameborder="0" marginwidth="0" marginheight="0">Loading…</iframe>
+</div>
+
 <div class="subpage-content">
   <h2>Malarkey Designer Shingles (Class 4)</h2>
   <p>The Windsor® designer shingle offers the look of a traditional cedar shake roof with the fortified durability of NEX® polymer modified asphalt technology to promote superior granule adhesion and extreme weather protection, including Class 4 impact resistance. This product also features Scotchgard™ Protector from 3M for added protection against black streaks caused by algae.</p>
@@ -240,7 +244,7 @@
         </ul>
       </div>
     </div>
-          <h4 class="h1">Before & After</h4>
+          <!-- <h4 class="h1">Before & After</h4> -->
           <!-- <div class="ba-slider">
             <img src="/images/home/bathroom.jpeg" alt="">       
             <div class="resize">
@@ -250,6 +254,7 @@
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="/images/work/roofing/DJI__0665.JPG" alt="Clay Tile Roof">
             <img class="our-work-image" src="/images/work/roofing/r-1.jpg" alt="Roofing">
             <img class="our-work-image" src="/images/work/roofing/r-2.jpg" alt="Roofing">
             <img class="our-work-image" src="/images/work/roofing/r-3.jpg" alt="Roofing">
