--- a/shed-homes-shouses.html
+++ b/shed-homes-shouses.html
@@ -32,14 +32,14 @@
     </div>
       <div class="text-align-left">
           <br />
-          <h4 class="h1">Before & After</h4>
+          <!-- <h4 class="h1">Before & After</h4>
           <div class="ba-slider">
             <img src="/images/home/bathroom.jpeg" alt="">       
             <div class="resize">
               <img src="/images/home/basement.jpeg" alt="">
             </div>
             <span class="handle"></span>
-          </div>
+          </div> -->
           <h4 class="h1" id="our-work">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="/images/work/shed-houses/farm-shed.png" alt="Farm Shed">
