--- a/agriculture-commercial-buildings.html
+++ b/agriculture-commercial-buildings.html
@@ -28,14 +28,14 @@
     </div>
       <div class="text-align-left">
           <br />
-          <h4 class="h1">Before & After</h4>
+          <!-- <h4 class="h1">Before & After</h4>
           <div class="ba-slider">
             <img src="/images/home/bathroom.jpeg" alt="">       
             <div class="resize">
               <img src="/images/home/basement.jpeg" alt="">
             </div>
             <span class="handle"></span>
-          </div>
+          </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="/images/work/commercial/7.png" alt="Agricultural Building">
@@ -57,6 +57,7 @@
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Scripts -->
     <script src="js/script.js"></script>
     <script src="js/loadTemplate.js"></script>
   </body>
