--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -55,16 +55,17 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
     <br />
       <div class="text-align-left">
           <br />
-          <h4 class="h1">Before & After</h4>
+          <!-- <h4 class="h1">Before & After</h4>
           <div class="ba-slider">
             <img src="/images/home/bathroom.jpeg" alt="">       
             <div class="resize">
               <img src="/images/home/basement.jpeg" alt="">
             </div>
             <span class="handle"></span>
-          </div>
+          </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="/images/work/decks/DJI_0140.JPG" alt="Drone Shot of Backyard Deck Addition">
             <img class="our-work-image" src="/images/work/decks/1.JPG" alt="Spacious Backyard Deck Addition">
             <img class="our-work-image" src="/images/work/decks/pp13.jpg" alt="Multilevel Deck">
             <img class="our-work-image" src="/images/work/decks/Night-1.jpg" alt="Deck with Stair Lights">
@@ -74,7 +75,7 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
     <section class="gradient-banner">
       <div class="gradient-content">
         <span>
-         Contact us today <a href="tel:3194818326" class="phone">319-481-8326</a> to learn more about our deck building and pergola installation services. We also offer a wide variety of in-house financing to clients who are interested in financing options.
+         Contact us today to learn more about our deck building and pergola installation services. We also offer a wide variety of in-house financing to clients who are interested in financing options.
         </span>
         <div class="triangle"></div>
         <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
