--- a/exterior-remodeling.html
+++ b/exterior-remodeling.html
@@ -14,15 +14,16 @@
     <div class="hero-nav exterior-remodeling">
     <div class="hero-nav__inner">
         <h1>Give Your House a Makeover</h1>
-        <a class="btn btn-primary" href="/our-work.html">See what T.E.A.M. Builders can do</a>
+        <a class="btn btn-primary" href="#how-we-can-help">See what T.E.A.M. Builders can do</a>
     </div>
 </div>
 <div class="subpage-content">
   <h2>Speak with our deck builder in Cedar Falls, IA today</h2>
     <p>Does your house need a face-lift? Don’t let your home’s old, dirty exterior diminish your curb appeal. Get in touch with the pros at T.E.A.M. Builders Ltd. today. Whether you want to update the <a href="/siding.html" class="green-link">siding</a> on your house or need <a href="/fencing.html" class="green-link">fence</a> installation help in Cedar Falls, IA, you can rely on us to finish the job.
     </p>
-    <p>nce we’re finished, you’ll be amazed by how beautiful your house looks. Trust us-your neighbors will notice, too.</p>
+    <p>Once we’re finished, you’ll be amazed by how beautiful your house looks. Trust us-your neighbors will notice, too.</p>
     <p>Call us at <a href="tel:3194818326" class="green-link"">319-481-8326</a> now speak with a deck builder in Cedar Falls, IA.</p>
+    <div id="how-we-can-help"></div>
     <br />
       <div class="text-align-left">
         <div class="row">
@@ -56,9 +57,12 @@
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="/images/work/decks/1.JPG" alt="Overhead View of Deck">
+            <img class="our-work-image" src="/images/work/decks/DJI_0140.JPG" alt="New Deck Renovation">
             <img class="our-work-image" src="/images/work/fencing/final-fence.png" alt="Large Backyard Fence">
+            <img class="our-work-image" src="/images/work/fencing/fence.png" alt="White Backyard Fence">
             <img class="our-work-image" src="/images/work/pergolas/p1.jpg" alt="Wood Backyard Pergola">
             <img class="our-work-image" src="/images/work/roofing/Roofing_4.png" alt="Roof on Blue House in Cedar Falls, IA">
+            <img class="our-work-image" src="/images/work/roofing/DJI_0665.JPG" alt="Clay Roof">
           </div>
       </div>
     </div>
