--- a/pergolas.html
+++ b/pergolas.html
@@ -55,14 +55,14 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
     <br />
       <div class="text-align-left">
           <br />
-          <h4 class="h1">Before & After</h4>
+          <!-- <h4 class="h1">Before & After</h4>
           <div class="ba-slider">
             <img src="/images/home/bathroom.jpeg" alt="">       
             <div class="resize">
               <img src="/images/home/basement.jpeg" alt="">
             </div>
             <span class="handle"></span>
-          </div>
+          </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="/images/work/pergolas/p10.jpg" alt="Wood Home Pergola">
