--- a/siding.html
+++ b/siding.html
@@ -57,16 +57,17 @@ Will protect your home from the elements</p>
             <li>Splurge on a few high-end materials</li>
             <li>Create the look of your dream home</li>
           </ol>
-          <h4 class="h1">Before & After</h4>
+          <!-- <h4 class="h1">Before & After</h4>
           <div class="ba-slider">
             <img src="/images/home/bathroom.jpeg" alt="">       
             <div class="resize">
               <img src="/images/home/basement.jpeg" alt="">
             </div>
             <span class="handle"></span>
-          </div>
+          </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="/images/work/siding/siding.png" alt="New Blue Siding">
             <img class="our-work-image" src="/images/work/siding/Siding_1.jpg" alt="Siding 1">
             <img class="our-work-image" src="/images/work/siding/Siding_2.png" alt="Siding 2">
             <img class="our-work-image" src="/images/work/siding/Siding_3.jpg" alt="Siding 3">
