Edit contact form, add 'New Construction' category

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div id="main-content-service-selector">
         <div id="select-interior" class="menu active"><a href="#interior-remodeling">Interior Remodeling</a></div>
         <div id="select-exterior" class="menu"><a href="#exterior-remodeling">Exterior Remodeling</a></div>
-        <div id="select-shed-homes" class="menu"><a href="#shed-homes">Shed Homes</a></div>
+        <div id="select-shed-homes" class="menu"><a href="#shed-homes">New Construction</a></div>
       </div>
     </div>
     <div class="fade">
@@ -51,7 +51,7 @@
           <img src="images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom">
         </div>
       </div>
-      <div class="service-card">
+      <div class="service-card my-15">
         <div class="service-card-header">
           <h3><a href="/basement-renovations.html">Basement</a></h3>
         </div>
@@ -77,7 +77,7 @@
           <img src="images/work/fencing/fence.png" alt="Fencing">
         </div>
       </div>
-      <div class="service-card">
+      <div class="service-card my-15">
         <div class="service-card-header">
           <h3><a href="/roofing.html">Roofing</a></h3>
         </div>
@@ -85,7 +85,7 @@
           <img src="images/work/roofing/DJI_0665.JPG" alt="Roofing">
         </div>
       </div>
-      <div class="service-card">
+      <div class="service-card my-15">
         <div class="service-card-header">
           <h3><a href="/deck-pergolas.html">Decks & Pergolas</a></h3>
         </div>
@@ -106,15 +106,15 @@
      <div id="main-content-service-cards-shed-homes" class="hidden">
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="/shed-homes-shouses.html">Shed Houses (Shouses)</a></h3>
+          <h3><a href="/shed-homes-shouses.html">New Construction Link 1</a></h3>
         </div>
         <div class="service-card-image">
           <img src="images/work/shed-houses/farm-shed.png" alt="Shed Houses">
         </div>
       </div>
-      <div class="service-card">
+      <div class="service-card my-15">
         <div class="service-card-header">
-          <h3><a href="/Agriculture-commercial-buildings.html">Agriculture & Commercial Buildings</a></h3>
+          <h3><a href="/Agriculture-commercial-buildings.html">New Construction Link 2</a></h3>
         </div>
         <div class="service-card-image">
           <img src="images/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings">
@@ -122,7 +122,7 @@
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="/event-venues.html">Event Venues</a></h3>
+          <h3><a href="/event-venues.html">New Construction Link 2</a></h3>
         </div>
         <div class="service-card-image">
           <img src="images/work/event-venues/event-venue-1.png" alt="Event Venues">
@@ -137,7 +137,7 @@
       <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls, IA</p>
     </div>
     <div class="below-main-content-image">
-      <img src="images/build-image.jpg">
+      <img src="images/our-process.png" alt="Our Process">
     </div>
   </section>
   <section class="gradient-banner">
